--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.1.3
   path: ^1.9.0
   image_picker: ^1.1.2
+  video_player: ^2.9.1
 
 dev_dependencies:
   flutter_test:
